--- a/index.html
+++ b/index.html
@@ -82,8 +82,8 @@
         <div class="container mx-auto px-6 py-20">
             <div class="flex flex-col md:flex-row items-center">
                 <div class="md:w-1/2 mb-10 md:mb-0 fade-in">
-                    <h1 class="text-4xl md:text-6xl font-bold mb-4">Hi, I'm <span class="text-blue-500">Aditi</span></h1>
-                    <h2 class="text-2xl md:text-3xl font-semibold mb-6 text-gray-600">DevOps Engineer</h2>
+                    <h1 class="text-4xl md:text-6xl font-bold mb-4">Hi, I'm <span class="text-blue-500">Sephora</span></h1>
+                    <h2 class="text-2xl md:text-3xl font-semibold mb-6 text-gray-600">DevOps Support Engineer</h2>
                     <p class="text-lg mb-8 text-gray-600">Building scalable and reliable cloud infrastructure with automation at its core.</p>
                     <div class="flex space-x-4">
                         <a href="#contact" class="bg-blue-500 hover:bg-blue-600 text-white px-6 py-3 rounded-lg transition">Contact Me</a>
